# leonardo-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  app_streamlit.py  docker-compose.yml  pyproject.toml  requirements.txt
qdrant_data/: raft_state.json
qdrant_data/collections/helicopters_docs/: config.json
qdrant_data/collections/helicopters_docs/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/helicopters_docs/0/segments/00fa51e9-df02-4e45-9473-09c35aca4ae8/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_data/collections/helicopters_docs/0/segments/00fa51e9-df02-4e45-9473-09c35aca4ae8/payload_index/: LOG  (+2 more)
qdrant_data/collections/helicopters_docs/0/segments/2cc33cfa-088d-44da-a58b-bdaab6458025/: mutable_id_tracker.mappings
qdrant_data/collections/helicopters_docs/0/segments/396601f8-dec9-467f-92e8-40978a3feda8/: mutable_id_tracker.mappings
qdrant_data/collections/helicopters_docs/0/segments/75423208-ce0a-4f32-8ea5-a473d01ac1cc/: mutable_id_tracker.mappings
qdrant_data/collections/helicopters_docs/0/segments/94136fe5-a180-4c70-9781-69b25de68e11/: mutable_id_tracker.mappings
qdrant_data/collections/helicopters_docs/0/segments/946ce9a0-fe06-43e2-af67-3d3b41b22355/: mutable_id_tracker.mappings
qdrant_data/collections/helicopters_docs/0/segments/b940efb0-5e29-45d8-97ce-0fac92df0f3a/: mutable_id_tracker.mappings
qdrant_data/collections/helicopters_docs/0/segments/eae1476d-221d-4bca-9115-57772f100008/: mutable_id_tracker.mappings
tests/: test_agent.py
tools/: pdf_query_tools.py  react_prompt_template.py
(+21 files in other folders)
